--- a/src/main/resources/templates/reviewFilter.html
+++ b/src/main/resources/templates/reviewFilter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Reviews</title>
@@ -55,13 +55,14 @@
         <button type="submit" class="btn btn-primary">Filter</button>
 
 
-        <table class="table">
+        <table class="table mt-5">
             <thead>
             <tr>
                 <th>Id</th>
                 <th>ReviewText</th>
                 <th>Rating</th>
                 <th>Date</th>
+
 
             </tr>
             </thead>
@@ -71,6 +72,7 @@
                 <td th:text="${review.reviewText}"></td>
                 <td th:text="${review.rating}"></td>
                 <td th:text="${review.reviewCreatedOnDate}"></td>
+
             </tr>
             </tbody>
         </table>
