--- a/src/main/resources/templates/reviewFilter.html
+++ b/src/main/resources/templates/reviewFilter.html
@@ -15,7 +15,7 @@
     </div>
 
 
-    <form th:action="@{'/filter'}" method="POST">
+    <form th:action="@{'/reviews'}" method="POST">
 
 
         <div class="form-group">
